// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders 1`] = `
<div>
  <div
    class="my-[6px] mx-0"
  >
    <div
      class="block cursor-pointer width-full relative py-[6px] -my"
      data-orientation="horizontal"
      id="base-ui-:r0:"
      role="group"
    >
      <div
        class="block absolute top-0 left-0 right-0 h-[13px]"
        data-orientation="horizontal"
        tabindex="-1"
      >
        <div
          class="block absolute w-full h-[1px] top-1/2 -translate-y rounded-none bg-gray"
          data-orientation="horizontal"
          style="position: relative;"
        >
          <div
            class="block h-[1px] bg-blue"
            data-orientation="horizontal"
            style="position: relative; height: inherit; inset-inline-start: 0; width: 0%;"
          />
        </div>
        <div
          class="group/thumb flex justify-center items-center w-[15px] h-[15px] rounded-[50%] bg-blue border-[2px] border-solid border-white outline-0 [&_input]:outline-none absolute transition-shadow cursor-pointer"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-:r1:"
          role="slider"
          style="position: absolute; inset-inline-start: 0%; top: 50%;"
          tabindex="-1"
        >
          <span
            class="absolute will-change transition-transform hidden bottom-[calc(100%+2px)] left-[calc(100%-13px)]"
          >
            <span
              class="shadow-4 text-sm text-white bg-graphite m-1 rounded-sm py-[2px] px-2 max-w break-words"
            >
              0
            </span>
          </span>
          <input
            aria-orientation="horizontal"
            aria-valuenow="0"
            id="base-ui-:r3:"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="0"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider with initial value 1`] = `
<div>
  <div
    class="my-[6px] mx-0"
  >
    <div
      class="block cursor-pointer width-full relative py-[6px] -my"
      data-orientation="horizontal"
      id="base-ui-:r8:"
      role="group"
    >
      <div
        class="block absolute top-0 left-0 right-0 h-[13px]"
        data-orientation="horizontal"
        tabindex="-1"
      >
        <div
          class="block absolute w-full h-[1px] top-1/2 -translate-y rounded-none bg-gray"
          data-orientation="horizontal"
          style="position: relative;"
        >
          <div
            class="block h-[1px] bg-blue"
            data-orientation="horizontal"
            style="position: relative; height: inherit; inset-inline-start: 0; width: 4%;"
          />
        </div>
        <div
          class="group/thumb flex justify-center items-center w-[15px] h-[15px] rounded-[50%] bg-blue border-[2px] border-solid border-white outline-0 [&_input]:outline-none absolute transition-shadow cursor-pointer"
          data-index="0"
          data-orientation="horizontal"
          id="base-ui-:r9:"
          role="slider"
          style="position: absolute; inset-inline-start: 4%; top: 50%;"
          tabindex="-1"
        >
          <span
            class="absolute will-change transition-transform hidden bottom-[calc(100%+2px)] left-[calc(100%-13px)]"
          >
            <span
              class="shadow-4 text-sm text-white bg-graphite m-1 rounded-sm py-[2px] px-2 max-w break-words"
            >
              4
            </span>
          </span>
          <input
            aria-orientation="horizontal"
            aria-valuenow="4"
            id="base-ui-:rb:"
            max="100"
            min="0"
            step="1"
            style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 100%; height: 100%; margin: -1px; position: fixed; top: 0px; left: 0px;"
            type="range"
            value="4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
